Alterando o nome do Projeto no site

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </main>
 
     <footer>
-        <p>GS corp &copy; 2025</p>
+        <p> Project P &copy; 2025</p>
     </footer>
 
     <script src="script.js"></script>
